fix button slide out div spill out

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -128,7 +128,7 @@ hr{
 /*###############view recipe#################*/
 
 .recipe_view{
-  border: 2px solid blue;
+  border: 2px solid greenyellow;
   font-family: 'Poppins', sans-serif;
 }
 
